GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/Event_Calendar_Entry__c.object-meta.xml
<CustomObject>
    <description>A single entry in a calendar of events. Refers to a special event or an external URL.</description>
    <label>Event Calendar Entry</label>
    <nameField>
        <label>Event Calendar Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Calendar Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>