GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/CSS_Class__c.field-meta.xml
<CustomField>
    <fullName>CSS_Class__c</fullName>
    <description>If specified, the event on the calendar page will be given this CSS class. Multiple classes may be specified space-delimited. This field may be populated by workflows or process builder or triggers; any custom fields with &quot;CSS&quot; as part of the field name will also be used as sources of CSS class data.</description>
    <inlineHelpText>If specified, the event on the calendar page will be given this CSS class. Multiple classes may be specified space-delimited. This field may be populated by workflows or process builder or triggers.</inlineHelpText>
    <label>CSS Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>