GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>A formula field to display the Event End Date.</description>
    <formula>IF( Special_Event__c != null, Special_Event__r.evt__End__c, Event_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A formula field that displays the Event End Date from the Special Event if linked to one.  Otherwise, displays the Event End Date entered on this Calendar Entry.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>