GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Event_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Event_Calendar__c</fullName>
    <description>The calendar this entry belongs to.</description>
    <inlineHelpText>The calendar this entry belongs to.</inlineHelpText>
    <label>Event Calendar</label>
    <referenceTo>Event_Calendar__c</referenceTo>
    <relationshipLabel>Event Calendar Entries</relationshipLabel>
    <relationshipName>Event_Calendar_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>