GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_End_Date__c</fullName>
    <description>If this is an external event (not a Linvio registered event), enter the end date/time here. If time is not relevant, check the &quot;hide time&quot; checkbox.</description>
    <inlineHelpText>If this is an external event (not a Linvio registered event), enter the end date/time here. If time is not relevant, check the &quot;hide time&quot; checkbox.</inlineHelpText>
    <label>Event End Date</label>
    <type>DateTime</type>
</CustomField>