GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <formula>IF(ISBLANK(Registration_Link__c) &amp;&amp; Special_Event__c != null, Special_Event__r.Quick_Event_URL__c, Registration_Link__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event URL</label>
    <type>Text</type>
</CustomField>