GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Hide_Time__c.field-meta.xml
<CustomField>
    <fullName>Hide_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If time is not relevant for start/end date, click this checkbox and time will not be shown.</description>
    <inlineHelpText>If time is not relevant for start/end date, click this checkbox and time will not be shown.</inlineHelpText>
    <label>Hide Time</label>
    <type>Checkbox</type>
</CustomField>