GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>The price to display on the calendar page. &quot;0&quot; means free; &quot;1&quot; means has multiple fees; specific value means has one fee with that value.</description>
    <formula>IF( NOT(Special_Event__r.evt__Free_Event__c) , 
   IF( Special_Event__r.Active_Event_Fees__c == 1,  Special_Event__r.Minimum_Event_Fee__c , 
      IF(Special_Event__r.Active_Event_Fees__c &gt; 1, 1 , 0)     
   ) , 
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The price to display on the calendar page. &quot;0&quot; means free; &quot;1&quot; means has multiple fees; specific value means has one fee with that value.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>