GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Price_old__c.field-meta.xml
<CustomField>
    <fullName>Price_old__c</fullName>
    <description>The price to display on the calendar page. &quot;0&quot; means free; blank means no price will be displayed.</description>
    <inlineHelpText>The price to display on the calendar page. &quot;0&quot; means free; blank means no price will be displayed.</inlineHelpText>
    <label>Price Old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>