GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Registration_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Close_Date__c</fullName>
    <formula>Special_Event__r.Registration_Close_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Close Date</label>
    <type>Date</type>
</CustomField>