GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>Registration_Link__c</fullName>
    <description>If this event is not related to a Linvio Special Event, enter the external URL of the registration form or event landing page here. If it is related a Linvio Event that has the record type external event, it will automatically display the External Event Page.</description>
    <inlineHelpText>If this event is not related to a Linvio Special Event, enter the external URL of the registration form or event landing page here.</inlineHelpText>
    <label>Registration Link</label>
    <type>Url</type>
</CustomField>