GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Registration_Open_Time__c.field-meta.xml
<CustomField>
    <fullName>Registration_Open_Time__c</fullName>
    <formula>Special_Event__r.Registration_Open_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration Open Time</label>
    <type>Time</type>
</CustomField>