GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Special_Event__c.field-meta.xml
<CustomField>
    <fullName>Special_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this event is a link to a Linvio Special link it here.</description>
    <inlineHelpText>If this event is a link to a Linvio Special link it here.</inlineHelpText>
    <label>Special Event</label>
    <referenceTo>evt__Special_Event__c</referenceTo>
    <relationshipLabel>Event Calendar Entries</relationshipLabel>
    <relationshipName>Event_Calendar_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>