GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>A formula field for the event start date.</description>
    <formula>IF( Special_Event__c != null, Special_Event__r.evt__Start__c, Event_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A formula field that displays the Event Start Date from the Special Event if linked to one.  Otherwise, displays the Event Start Date entered on this Calendar Entry.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>