GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Subtitle__c.field-meta.xml
<CustomField>
    <fullName>Subtitle__c</fullName>
    <description>The subtitle of the calendar entry, shown below the event name in the standard calendar view. Usually a description of the event and/or venue.  If this is a linvio Event, auto populated from event description.</description>
    <inlineHelpText>The subtitle of the calendar entry, shown below the event name in the standard calendar view. Usually a description of the event and/or venue.  If this is a linvio Event, auto populated from event description.</inlineHelpText>
    <label>Subtitle</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>