GoalTracker/force-app/main/default/objects/Event_Calendar_Entry__c/fields/Thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image__c</fullName>
    <description>The URL to a thumbnail image of this calendar entry.</description>
    <inlineHelpText>The URL to a thumbnail image of this calendar entry.</inlineHelpText>
    <label>Thumbnail Image</label>
    <type>Url</type>
</CustomField>